# arl22-rl-stock-trading

./: .gitignore  README.md  architecture.drawio  data.ipynb  dqn_ohlc.out  dqn_ohlc_tick_twitter.err  dqn_ohlc_tick_twitter.out  dqn_ohlc_time.err  dqn_ohlc_time.out  dqn_ohlc_time_reddit.err  dqn_ohlc_time_tick_reddit.err  dqn_ohlc_time_tick_reddit.out  dqn_ohlc_time_twitter.err  dqn_ohlc_time_twitter.out  main.py  meta_trader_connection.py  notes.md  pyproject.toml  start_batch_jobs.sh
TDQN-Model/: README.md  TDQN.py  classicalStrategy.py  dataAugmentation.py  dataDownloader.py  fictiveStockGenerator.py  main.py  requirements.txt  timeSeriesAnalyser.py  tradingEnv.py  tradingPerformance.py  tradingSimulator.py
config/: template.yaml
experiments/: .env  basic_test.py  example_rltrading_usage.py  experiment.py  fetch_data.py  main.py  misc.py  split_data.py
experiments/config/: a2c_ohlc_time_reddit.yaml  dqn-ohlc+tick+reddit.yaml  dqn-ohlc+time+tick+twitter.yaml  dqn-ohlc.yaml  template-a2c.yaml  template-dqn.yaml  template-ppo.yaml  template.yaml
experiments/config/old/: a2c_ohlc_time_reddit.yaml  dqn-ohlc+reddit+twitter.yaml  dqn-ohlc+reddit.yaml  dqn-ohlc+tick+reddit.yaml  dqn-ohlc+time+tick+twitter.yaml  dqn-ohlc+twitter.yaml  dqn-ohlc.yaml  template-a2c.yaml  template-dqn-train.yaml  template-dqn.yaml  (+2 more)
experiments/jobs/: dqn-ohlc-reddit-twitter.slurm  dqn-ohlc-tick-reddit.slurm  dqn-ohlc-twitter.slurm  stock-trading-dqn-ohlc-time-tick-twitter.slurm  stock-trading-dqn-ohlc-twitter.slurm
missing/: create.py
plotting/: calc_total_rewards.py  create_plots.py  plot.ipynb  plot_results.py  plot_total_rewards.py  plots.py  plotting.ipynb  preprocess.py  utils.py
resources/: architecture.drawio
rltrading/: __init__.py
rltrading/data/: README.md  __init__.py  connector.py  data.py  fundamental.py  handler.py  historical_data.py  live_quotes.py  market.py  meta_trader.py  utils.py
rltrading/gym/: Environment.py  __init__.py  environment.py
rltrading/learn/: __init__.py  agent.py  resultPlotting.py  result_handler.py  result_plotting.py
rltrading/learner/: __init__.py  agent.py  dqn.py  replayMemory.py
src/: main.py  meta_trader_connection.py  misc.py
(+230 files in other folders)
