[tool.poetry]
name = "rltrading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
lemon = "^1.1.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
black = "^22.6.0"
paho-mqtt = "^1.6.1"
plotly = "^5.9.0"
dash = "^2.6.1"
plotext = "^5.0.2"
matplotlib = "^3.5.3"
Nasdaq-Data-Link = "^1.0.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
finnhub-python = "^2.4.14"
tqdm = "^4.64.0"
ipykernel = "^6.15.1"
PyYAML = "^6.0"
numpy = "^1.23.2"
stable-baselines3 = "^1.6.0"
pyglet = "^1.5.26"
tensorboard = "^2.10.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
