[tool.poetry]
name = "rltrading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
black = "^22.6.0"
matplotlib = "^3.5.3"
finnhub-python = "^2.4.14"
ipykernel = "^6.15.1"
PyYAML = "^6.0"
numpy = "^1.23.2"
stable-baselines3 = "^1.6.0"
pyglet = "^1.5.26"
tensorboard = "^2.10.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
